kust/base/fastapp.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fastapp
spec:
  hosts:
  - "*"
  gateways:
  - fastapp-gateway
  http:
  - route:
    - destination:
        host: fastapp
        port:
          number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapp
  labels:
    app: fastapp
    service: fastapp
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    app: fastapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapp
      version: v1
  template:
    metadata:
      labels:
        app: fastapp
        version: v1
    spec:
      serviceAccountName: fastapp
      containers:
      - image: docker.io/ssshier/fastapp:2.0.0
        imagePullPolicy: IfNotPresent
        name: fastapp
        ports:
        - containerPort: 5000
